...
        android:gravity="center"
        android:text="@string/new_folder"
        android:textAlignment="center"
        android:textColor="@color/grayish"

        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/folder_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
...
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/folder_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/grayish"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFolderTitle" />

    <Button
        android:fontFamily="@font/baloo"
...
