...
        android:gravity="center"

        android:text="@string/addToFolder"
        android:textAlignment="center"
        android:textColor="@color/grayish"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/list_folders"
...
