<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yollowish"
    tools:context="presentation.CardviewActivity">

    <TextView
        android:id="@+id/card_front"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/yollowishButtonColor"
        android:textSize="22sp"
        android:alpha="1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/card_back"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:text="@string/answer"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/yollowishButtonColor"
        android:textSize="22sp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/flip_button"
        android:backgroundTint="@color/yollowishButtonColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/flip"
        android:textColor="@color/grayish"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_front" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="65dp"
        android:contentDescription="@string/Delete_button"
        android:onClick="deleteCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flip_button"
        app:layout_constraintTop_toBottomOf="@+id/card_front"
        app:srcCompat="@drawable/ic_baseline_delete_forever_24" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="334dp"
        android:layout_marginBottom="117dp"
        android:contentDescription="@string/home_button"
        android:onClick="goHome"
        app:layout_constraintBottom_toTopOf="@+id/card_front"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_home_24" />

</androidx.constraintlayout.widget.ConstraintLayout>







