<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yollowish">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="136dp"
        android:fontFamily="@font/baloo"
        android:text="@string/question"
        android:textColor="@color/grayish"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/baloo"
        android:text="@string/answer"
        android:textColor="@color/grayish"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="54dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textColor="@color/grayish"
        android:textColorHint="@color/grayish"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="19dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textColor="@color/grayish"
        android:textColorHint="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_make_flashcard"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="173dp"
        android:background="@color/yollowishButtonColor"
        android:onClick="makeCard"
        android:text="@string/make_flashcard"
        android:textColor="@color/grayish"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

</androidx.constraintlayout.widget.ConstraintLayout>